# xayn_discovery_engine

./: .buildinfo  .dockerignore  .env  .gitattributes  .gitignore  .readthedocs.yaml  .spectral.js  .spectral.yaml  CNAME  Cargo.toml  INTEGRATION_TEST_DESIGN.md  NOTICE  README.md  TEST  asset_manifest.json  back_office.html  bors.toml  front_office.html  genindex.html  index.html  job_runner.sh  justfile  objects.inv  rustfmt.toml  search.html  searchindex.js  tmp_script.sh
ai/bert/: Cargo.toml
ai/bert/benches/: bert.rs
ai/bert/examples/: validate.rs
ai/bert/src/: config.rs
app_engine/ai/: Cargo.toml
app_engine/ai/src/: error.rs  lib.rs  utils.rs
app_engine/tooling/: Cargo.toml
bert/: Cargo.toml
bert/benches/: bert.rs
bert/examples/: bert.rs  onnx_runtime.rs  ort_check.rs  validate.rs
bert/src/: config.rs  embedding.rs  lib.rs  model.rs  pipeline.rs  pooler.rs  tokenizer.rs
bert/src/tokenizer/: bert.rs  generic_hf.rs  huggingface.rs  roberta.rs  unigram.rs
coi/: Cargo.toml
coi/benches/: benches.rs
coi/src/: config.rs  context.rs  document.rs  embedding.rs  id.rs  lib.rs  point.rs  stats.rs  system.rs  utils.rs
core/: Cargo.toml
core/benches/: benches.rs
core/src/: config.rs  engine.rs  mab.rs  stack.rs  storage.rs
core/src/storage/: models.rs
core/test-fixtures/: articles-invalid-link.json
discovery_engine_core/: .gitignore  Cargo.toml  rust-toolchain.toml
discovery_engine_core/ai/ai/: Cargo.toml
discovery_engine_core/ai/bert/: Cargo.toml
discovery_engine_core/ai/kpe/: Cargo.toml  extract_params.py
discovery_engine_core/ai/layer/: Cargo.toml
discovery_engine_core/ai/rubert/: Cargo.toml
discovery_engine_core/ai/rubert-tokenizer/: Cargo.toml
discovery_engine_core/ai/test-utils/: Cargo.toml
discovery_engine_core/ai/tokenizer/: Cargo.toml
discovery_engine_core/ai/xayn-ai/: Cargo.toml
discovery_engine_core/async-bindgen/async-bindgen/: Cargo.toml
discovery_engine_core/async-bindgen/async-bindgen-derive/: Cargo.toml
discovery_engine_core/async-bindgen/async-bindgen-gen-dart/: Cargo.toml
discovery_engine_core/bindings/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
discovery_engine_core/bindings/migrations/: 1_initial.sql  2_add_age.sql
discovery_engine_core/bindings/src/: async_bindings.rs  database.rs  lib.rs  tracing.rs  types.rs
discovery_engine_core/core/: Cargo.toml
discovery_engine_core/core/benches/: benches.rs
discovery_engine_core/core/src/: config.rs  document.rs  engine.rs  error.rs  ex_stack.rs  lib.rs  mab.rs  message_api.rs  ranker.rs  stack.rs  state.rs  storage.rs  storage2.rs  utils.rs
discovery_engine_core/core/test-fixtures/: articles-invalid-clean-url.json  articles-invalid-excerpt.json  articles-invalid-link.json  articles-invalid-title.json  articles-some-malformed-media-urls.json  articles-valid.json
discovery_engine_core/providers/: Cargo.toml
discovery_engine_core/providers/src/: bing.rs  clean_query.rs  client.rs  config.rs  (+13 more)
discovery_engine_core/tooling/: .gitignore  Cargo.toml  Dockerfile
discovery_engine_core/web-api/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ingestion  Dockerfile.personalization  README.md  compose.yml  docker-compose.yml  dummy_data.json  openapi.yaml
discovery_engine_core/web-api2/: Cargo.toml  openapi.yaml
integration-test-utils/: Cargo.toml
integration-test-utils/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: document_candidates.rs  document_properties.rs  elastic.rs  et_4957_es_deletion.rs  filter.rs  health.rs  ingestion.rs  legacy_tenant_migration.rs  manage_indexed_properties.rs  personalized_semantic_search.rs  recommendations.rs  semantic_search.rs  silo_management_api.rs  split_documents.rs  store_user_history.rs  tenant_id_header.rs  user_recommendations.rs
providers/: Cargo.toml
providers/src/: error.rs
providers/test-fixtures/: invalid-articles-only.json
snippet-extractor/: Cargo.toml  Pipfile
snippet-extractor/python_src/: extractor.py  snippet_extractor.py
snippet-extractor/src/: lib.rs  pool.rs  python_child.rs
snippet-extractor/tests/: basic_functionality.rs
summarizer/: Cargo.toml
summarizer/src/: lib.rs  summarizers.rs
test-utils/: Cargo.toml
test-utils/src/: approx_eq.rs  asset.rs  env.rs  error.rs  integration.rs  lib.rs  python.rs  workspace.rs
web-api/: Cargo.toml  Dockerfile  Dockerfile.release  compose.db.yml  compose.ingestion.yml  compose.personalization.yml  compose.single-machine-deploy.yml  compose.yml  openapi.yaml
web-api-db-ctrl/: Cargo.toml
web-api-db-ctrl/elasticsearch/: mapping.json
web-api-db-ctrl/src/: elastic.rs  lib.rs  postgres.rs  tenant.rs
web-api-shared/: Cargo.toml
web-api-shared/src/: elastic.rs  lib.rs  net.rs  pinecone.rs  postgres.rs  request.rs  serde.rs  url.rs
web-api/benches/: coi_personalization.rs  stateless_personalization.rs
web-api/elastic-search/: Dockerfile.create_es_index  create_es_index.sh  mapping.json
web-api/elastic_search/: Dockerfile.setup_mapping  mapping.json
web-api/migrations/: 20220926145400_document.sql  20221214154900_document.sql  20230216164200_document.sql  20230302133700_document.sql
web-api/openapi/: CHANGELOG.md  back_office.yaml  document_management.yaml  front_office.yaml  user_management.yaml
web-api/src/: app.rs  config.rs  db.rs  elastic.rs  embedding.rs  error.rs  extractor.rs  frontoffice.rs  ingestion.rs  lib.rs  load_config.rs  logging.rs  middleware.rs  migration.rs  mind.rs  models.rs  net.rs  personalization.rs  rank_merge.rs  server.rs  storage.rs  tenants.rs  utils.rs  web_api.rs
web-api/tests/: config.rs  document_candidates.rs  document_properties.rs  elastic.rs  es_deletion_bug.rs  et_4957_es_deletion.rs  filter.rs  health.rs  hurl.rs  ingestion.rs  legacy_tenant_migration.rs  manage_indexed_properties.rs  personalized_documents.rs  personalized_semantic_search.rs  recommendations.rs  semantic_search.rs  silo_management_api.rs  split_documents.rs  stateless_personalization.rs  store_user_history.rs  tenant_id_header.rs
(+899 files in other folders)
