[workspace]
members = [
    "bert",
    "coi",
    "integration-tests",
    "summarizer",
    "test-utils",
    "web-api",
    "web-api-db-ctrl",
    "web-api-shared",
]



[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.68.0"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde", "std"] }
criterion = "0.4.0"
csv = "1.2.1"
derive_more = { version = "0.99.17", default-features = false, features = ["as_ref", "deref", "deref_mut", "display", "from", "into"] }
displaydoc = "0.2.3"
figment = "0.10.8"
futures-util = "0.3.27"
itertools = "0.10.5"
ndarray = "0.15.6"
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.7.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
secrecy = { version = "0.8.0", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", default-features = false }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[profile.dev.package.tract-core]
opt-level = 3
# extremely slows down tract ^0.19 if enabled for non-trivial onnx models
debug-assertions = false
