[workspace]
members = [
    "bert",
    "coi",
    "integration-tests",
    "summarizer",
    "test-utils",
    "web-api",
    "web-api-db-ctrl",
    "web-api-shared",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.68.0"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
cfg-if = "1.0.0"
chrono = { version = "0.4.26", default-features = false, features = ["clock", "serde", "std"] }
criterion = "0.5.1"
csv = "1.2.2"
derive_more = { version = "0.99.17", default-features = false, features = ["as_ref", "deref", "deref_mut", "display", "from", "into"] }
displaydoc = "0.2.4"
figment = { version = "0.10.10", features = ["toml"] }
futures-util = "0.3.28"
itertools = "0.10.5"
ndarray = "0.15.6"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.8.4"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", default-features = false }
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
