[package]
name = "xayn-ai-bert"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cfg-if = { workspace = true }
derive_more = { workspace = true }
displaydoc = { workspace = true }
figment = { workspace = true }
ndarray = { workspace = true, features = ["serde"] }
ort = { version = "1.15.2", default-features = false, features = ["load-dynamic"] }
serde = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
tokenizers = { version = "0.15.0", default-features = false, features = ["onig"] }
xayn-test-utils = { path = "../test-utils" }

[dev-dependencies]
criterion = { workspace = true }
csv = { workspace = true }
indicatif = "0.17.5"

[[example]]
name = "bert"
test = false

[[bench]]
name = "bert"
harness = false
test = false
