[package]
name = "xayn-ai-coi"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
derive_more = { workspace = true }
displaydoc = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["rc"] }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }
xayn-ai-bert = { path = "../bert" }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
rand_distr = "0.4.3"
serde_json = { workspace = true }
xayn-test-utils = { path = "../test-utils" }

[[bench]]
name = "benches"
harness = false
