[workspace]
members = [
    "ai/*",
    "async-bindgen/*",
    "bindings",
    "core",
    "providers",
    "tooling",
    "web-api",
    "web-api2",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"

[workspace.dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
bincode = "1.3.3"
cfg-if = "1.0.0"
chrono = { version = "0.4.22", default-features = false, features = ["std"] }
clap = { version = "4.0.10", features = ["derive"] }
criterion = { version = "0.3.6", features = ["html_reports"] }
csv = "1.1.6"
derivative = "2.2.0"
derive_more = { version = "0.99.17", default-features = false, features = ["as_ref", "deref", "display", "from"] }
displaydoc = "0.2.3"
float-cmp = "0.9.0"
futures = { version = "0.3.24", default-features = false, features = ["alloc"] }
futures-util = "0.3.24"
heck = "0.4.0"
indicatif = "0.17.1"
itertools = "0.10.5"
maplit = "1.0.2"
ndarray = "0.15.6"
num-traits = "0.2.15"
once_cell = "1.15.0"
pin-project = "1.0.12"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.5.3"
regex = "1.6.0"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.2", features = ["chrono", "runtime-tokio-rustls", "uuid"] }
thiserror = "1.0.37"
tokenizers = { version = "0.13.0", default-features = false, features = ["onig"] }
tokio = { version = "1.21.2", default-features = false }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tract-onnx = "0.18.1"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
wiremock = "0.5.14"

[patch.crates-io.xayn-dart-api-dl]
git = "https://github.com/xaynetwork/xayn_dart_api_dl.git"
branch = "main"

[patch.crates-io.xayn-dart-api-dl-sys]
git = "https://github.com/xaynetwork/xayn_dart_api_dl.git"
branch = "main"

[profile.dev.package.tract-core]
opt-level = 3
