[workspace]
members = [
    "ai/*",
    "core",
    "providers",
    "tooling",
    "web-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[workspace.dependencies]
actix-web = { version = "4.2.1", default-features = false, features = ["compress-gzip", "compress-zstd"] }
anyhow = "1.0.66"
async-trait = "0.1.58"
bincode = "1.3.3"
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
clap = { version = "4.0.23", features = ["derive"] }
criterion = "0.4.0"
csv = "1.1.6"
derivative = "2.2.0"
derive_more = { version = "0.99.17", default-features = false, features = ["as_ref", "deref", "display", "from", "into"] }
displaydoc = "0.2.3"
figment = "0.10.8"
float-cmp = "0.9.0"
indicatif = "0.17.2"
itertools = "0.10.5"
maplit = "1.0.2"
ndarray = "0.15.6"
once_cell = "1.16.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.5.3"
regex = "1.7.0"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.2", features = ["chrono", "runtime-tokio-rustls", "uuid"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", default-features = false }
tracing = "0.1.37"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
wiremock = "0.5.15"

[profile.dev.package.tract-core]
opt-level = 3
