[package]
name = "integration-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
mime = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
scopeguard =  "1.1.0"
serde_json = { workspace = true }
sqlx = { workspace = true }
test-utils = { path = "../test-utils" }
tokio = { workspace = true }
