[package]
name = "xayn-ai-integration-test-utils"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"
publish = false

[dependencies]
chrono = { workspace = true, features = ["clock"] }
mime = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
scopeguard =  "1.1.0"
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
xayn-ai-test-utils = { path = "../test-utils" }
