[package]
name = "xayn-integration-test-utils"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"
publish = false

[dependencies]
chrono = { workspace = true, features = ["clock"] }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
scopeguard =  "1.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.7.1"
xayn-ai-test-utils = { path = "../test-utils" }
xayn-web-api = { path = "../web-api" }
