[package]
name = "xayn-integration-tests"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
chrono = { workspace = true }
derive_more = "0.99.17"
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
xayn-test-utils = { path = "../test-utils" }
xayn-web-api = { path = "../web-api" }
xayn-web-api-db-ctrl = { path = "../web-api-db-ctrl" }
xayn-web-api-shared = { path = "../web-api-shared" }
