[package]
name = "xayn-integration-tests"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
chrono = { workspace = true }
derive_more = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-flame = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { workspace = true }
xayn-test-utils = { path = "../test-utils" }
xayn-web-api = { path = "../web-api" }
xayn-web-api-db-ctrl = { path = "../web-api-db-ctrl" }
xayn-web-api-shared = { path = "../web-api-shared" }

[dev-dependencies]
base64 = { workspace = true }
itertools = { workspace = true }
trycmd = "0.14.16"
url = { workspace = true }

[dev-dependencies.old-xayn-web-api]
package = "xayn-web-api"
version = "0.1.1"
git = "https://github.com/xaynetwork/xayn_discovery_engine.git"
rev = "f7bdf56e265e78d34d35f67301914fcd9c9179e9"
