[package]
name = "xayn-summarizer"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Reduce long text to few relevant sentences"
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
unicode-segmentation = "1.10.1"
