[package]
name = "xayn-test-utils"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
cfg-if = { workspace = true }
float-cmp = "0.9.0"
ndarray = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
