[package]
name = "xayn-web-api-db-ctrl"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Library for setting up the DBs of the web-api, including for new tenants."
license = "AGPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json =  { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
xayn-web-api-shared = { path = "../web-api-shared" }
