[package]
name = "xayn-web-api-shared"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Parts shared between the web-api and the web-api-db-ctrl crate."
license = "AGPL-3.0-only"

[dependencies]
derive_more = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
