[package]
name = "xayn-web-api-shared"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Parts shared between the web-api and the web-api-db-ctrl crate."
license = "AGPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
displaydoc = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
