[package]
name = "xayn-web-api"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Wep Api server for the document personalization service."
license = { workspace = true }

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.3.1", default-features = false, features = ["compress-gzip", "compress-zstd"] }
anyhow = { workspace = true }
async-stream = "0.3.5"
async-trait = { workspace = true }
aws-config = "0.56.0"
aws-sdk-sagemakerruntime = "0.29.0"
base64 = "0.21.2"
chrono = { workspace = true }
clap = { version = "4.3.4", features = ["derive"] }
const_format = "0.2.31"
csv = { workspace = true }
derive_more = { workspace = true }
displaydoc = { workspace = true }
dotenvy = "0.15.7"
either = { version = "1.8.1", features = ["serde"] }
figment = { workspace = true, features = ["env"] }
futures-util = { workspace = true }
itertools = { workspace = true }
mime = "0.3.17"
mime_serde_shim = "0.2.2"
ndarray = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { version = "0.10.7", features = ["asm"] }
sqlx = { workspace = true, features = ["chrono", "uuid"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { version = "2.4.0", features = ["serde"] }
uuid = { workspace = true }
xayn-ai-bert = { path = "../bert", features = ["sqlx"] }
xayn-ai-coi = { path = "../coi", features = ["sqlx"] }
xayn-snippet-extractor = { path = "../snippet-extractor" }
xayn-summarizer = { path = "../summarizer" }
xayn-web-api-db-ctrl = { path = "../web-api-db-ctrl" }
xayn-web-api-shared = { path = "../web-api-shared" }

[dev-dependencies]
bincode = "1.3.3"
criterion = { workspace = true }
instant-distance = { version = "0.6.0", features = ["with-serde"] }
npyz = "0.8.1"
ouroboros = "0.17.0"
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true }
trycmd = "0.14.16"
xayn-integration-tests = { path = "../integration-tests" }
xayn-test-utils = { path = "../test-utils" }

[dev-dependencies.old-xayn-web-api]
package = "xayn-web-api"
version = "0.1.1"
git = "https://github.com/xaynetwork/xayn_discovery_engine.git"
rev = "f7bdf56e265e78d34d35f67301914fcd9c9179e9"

[[bench]]
name = "coi_personalization"
harness = false
test = false

[[bench]]
name = "stateless_personalization"
harness = false
test = false
