[package]
name = "xayn-discovery-engine-bert"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"

[dependencies]
derive_more = { workspace = true }
displaydoc = { workspace = true }
figment = { workspace = true, features = ["toml"] }
float-cmp = { workspace = true }
itertools = { workspace = true }
lindera = "0.18.0"
ndarray = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokenizers = { version = "0.13.2", default-features = false, features = ["onig"] }
tract-onnx = "0.18.3"

# dev-dependencies which don't work for aarch targets
onnxruntime = { version = "0.0.13", optional = true }

[dev-dependencies]
csv = { workspace = true }
xayn-discovery-engine-test-utils = { path = "../test-utils" }

[[example]]
name = "bert"
test = false

[[example]]
name = "validate"
test = false
required-features = ["onnxruntime"]

[[bench]]
name = "bert"
harness = false
test = false
required-features = ["onnxruntime"]
