[package]
name = "xayn-discovery-engine-ai"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"

[dependencies]
derivative = { workspace = true }
derive_more = { workspace = true }
displaydoc = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["rc"] }
thiserror = { workspace = true }
uuid = { workspace = true }
xayn-ai-bert = { path = "../../bert" }
xayn-ai-coi = { path = "../../coi" }
xayn-discovery-engine-providers = { path = "../providers" }

[dev-dependencies]
rand = { workspace = true }
serde_json = { workspace = true }
xayn-discovery-engine-test-utils = { path = "../../test-utils" }

