[package]
name = "xayn-discovery-engine-tooling"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"
publish = false

[dependencies]
actix-web = { workspace = true, features = ["macros"] }
anyhow = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
displaydoc = { workspace = true }
env_logger = "0.9.3"
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
indicatif = { workspace = true }
log = "0.4.17"
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
url = { workspace = true }
xayn-ai-coi = { path = "../../coi" }
xayn-discovery-engine = { path = "../engine" }
xayn-discovery-engine-ai = { path = "../ai" }
xayn-discovery-engine-providers = { path = "../providers" }
xayn-discovery-engine-test-utils = { path = "../../test-utils" }

[[bin]]
name = "backend"

[[bin]]
name = "clean_sources"

[[bin]]
name = "discovery_engine"

[[bin]]
name = "newscatcher"
