[package]
name = "xayn-discovery-engine-bindings"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
async-bindgen = "0.1.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.19", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["as_ref", "from"] }
ndarray = "=0.15.3"
tokio = { version = "1.17.0", default-features = false, features = ["sync"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
url = "2.2.2"
uuid = "1.0.0"
xayn-discovery-engine-ai = { path = "../ai/ai" }
xayn-discovery-engine-core = { path = "../core" }
xayn-discovery-engine-providers = { path = "../providers" }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[dev-dependencies]
async-bindgen-gen-dart = "0.1.0"
uuid = { version = "1.0.0", features = ["v4"] }

[build-dependencies]
cbindgen = "=0.20.0"
heck = "0.4.0"

[lib]
crate-type = ["cdylib", "staticlib"]
