[package]
name = "xayn-discovery-engine-bindings"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"

[dependencies]
async-bindgen = { path = "../async-bindgen/async-bindgen" }
cfg-if = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
url = { workspace = true }
uuid = { workspace = true }
xayn-discovery-engine-ai = { path = "../ai/ai" }
xayn-discovery-engine-core = { path = "../core" }
xayn-discovery-engine-providers = { path = "../providers" }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[build-dependencies]
cbindgen = "=0.24.3"
heck = { workspace = true }

[features]
japanese = ["xayn-discovery-engine-ai/japanese", "xayn-discovery-engine-core/japanese"]
storage = ["xayn-discovery-engine-core/storage"]

[lib]
crate-type = ["cdylib", "staticlib"]
